add services modal

--- a/app/index.html
+++ b/app/index.html
@@ -399,6 +399,47 @@
 				</div>
 			</section>
 
+			<section id="section-services-carousel">
+				<div class="owl-carousel services-carousel">
+
+					<div class="owl-item">
+						<img src="assets/services/veneers.jpg" alt="Service Image">
+						<h5 class="floating-owl-title">Veneers</h5>
+					</div>
+
+					<div class="owl-item">
+						<img src="assets/services/whitening.jpg" alt="Service Image">
+						<h5 class="floating-owl-title">Whitening</h5>
+					</div>
+
+					<div class="owl-item">
+						<img src="assets/services/composites.jpg" alt="Service Image">
+						<h5 class="floating-owl-title">Composites</h5>
+					</div>
+
+					<div class="owl-item">
+						<img src="assets/services/crowns.jpg" alt="Service Image">
+						<h5 class="floating-owl-title">Crowns</h5>
+					</div>
+
+					<div class="owl-item">
+						<img src="assets/services/digital-xray.jpg" alt="Service Image">
+						<h5 class="floating-owl-title">Digital X-ray</h5>
+					</div>
+
+					<div class="owl-item">
+						<img src="assets/services/periodontal.jpg" alt="Service Image">
+						<h5 class="floating-owl-title">Periodontal</h5>
+					</div>
+
+					<div class="owl-item">
+						<img src="assets/services/rootcanals.jpg" alt="Service Image">
+						<h5 class="floating-owl-title">Root Canals</h5>
+					</div>
+
+				</div>
+			</section>
+
 			<section id="section-location" class="content-section">
 
 				<div class="container floating-card">
