get correct map location background

--- a/app/index.html
+++ b/app/index.html
@@ -445,7 +445,7 @@
 				<div class="container floating-card">
 					<div class="center">
 						<div class="row">
-							<div class="col-lg-5 col-md-5 floating-card--col-fix">
+							<div class="col-lg-4 col-md-5 col-lg-push-8 col-md-push-7 floating-card--col-fix">
 								<div class="location-card center">
 
 									<!--Logo-->
@@ -453,8 +453,8 @@
 										<img  src="assets/warwick-logo.svg" alt="Dr. Paquette">
 									</a>
 
-									<p class="t300">819 Greenwich Ave, Warwick, RI 02886</p>
-									<a href="https://www.google.com/maps/place/Warwick+Family+Dental+Group/@41.7138325,-71.4662699,17z/data=!4m13!1m7!3m6!1s0x89e44c12c0a201a3:0x5a6df8229ad8e9c3!2s819+Greenwich+Ave,+Warwick,+RI+02886!3b1!8m2!3d41.7138325!4d-71.4640812!3m4!1s0x89e44c12c09ba517:0x8f67136552b224a3!8m2!3d41.7138325!4d-71.4640812" target="_blank" class="link-no-style ">
+									<p class="t300">2325 W Arbors Dr.<br>Charlotte, NC 28262</p>
+									<a href="https://www.google.com/maps/place/2325+W+Arbors+Dr,+Charlotte,+NC+28262/@35.3384596,-80.7629621,17z/data=!3m1!4b1!4m5!3m4!1s0x88541c541ad4594b:0x26f7409c5fc8890b!8m2!3d35.3384596!4d-80.7607734" target="_blank" class="link-no-style ">
 										<h6 class="t400 underline">Click for map & directions</h6>
 									</a>
 
@@ -474,7 +474,7 @@
 					</div>
 				</div>
 
-				<a href="https://www.google.com/maps/place/Warwick+Family+Dental+Group/@41.7138325,-71.4662699,17z/data=!4m13!1m7!3m6!1s0x89e44c12c0a201a3:0x5a6df8229ad8e9c3!2s819+Greenwich+Ave,+Warwick,+RI+02886!3b1!8m2!3d41.7138325!4d-71.4640812!3m4!1s0x89e44c12c09ba517:0x8f67136552b224a3!8m2!3d41.7138325!4d-71.4640812" target="_blank"><div id="google-map5" class="gmap"></div></a>
+				<a href="https://www.google.com/maps/place/2325+W+Arbors+Dr,+Charlotte,+NC+28262/@35.3384596,-80.7629621,17z/data=!3m1!4b1!4m5!3m4!1s0x88541c541ad4594b:0x26f7409c5fc8890b!8m2!3d35.3384596!4d-80.7607734" target="_blank"><div id="google-map5" class="gmap"></div></a>
 
 			</section>
 
