update responsive styling

--- a/app/index.html
+++ b/app/index.html
@@ -79,9 +79,9 @@
 	<!-- Marquee Slider
   ============================================= -->
 	<section id="mobile-background" class="hidden-md hidden-lg">
-		<h1 class="hidden">Dentistry for your family. Doctor Jack Paquette, Tuscaloosa</h1>
-		<a href="#" data-toggle="modal" data-target="#requestAppointmentForm">
-			<img src="assets/paquette-mobile-slide.jpg" style="width:100%;height:auto;" alt="Dr. Jack Paquette">
+		<h1 class="hidden">Dentistry for Gina Davis</h1>
+		<a href="#" data-scrollTo="#section-specials" data-offset="0">
+			<img src="assets/slide1-mobile.jpg" style="width:100%;height:auto;" alt="Dr. Gina Davis">
 		</a>
 	</section>
 
@@ -174,7 +174,7 @@
 						<div class="col-md-6 phone-slab__left">
 							<h6 class="t400 text">New Patient Hotline</h6>
 							<h3 class="phone-number "><a href="tel:1-888-900-6321" class="link-no-style">(888)&nbsp;900&#8209;6321</a></h3>
-							<h5 class="t400 text">
+							<h5 class="t400 text hidden-xs hidden-sm">
 								Existing patients:
 								<a href="tel:1-704-547-8734" class="link-no-style t700 phone-number phone-number--sub">(704)&nbsp;547&#8209;8734</a>
 							</h5>
@@ -182,11 +182,12 @@
 						<div class="col-md-6 phone-slab__right ">
 							<button class="btn" data-toggle="modal" data-target="#requestAppointmentForm">Request An Appointment</button>
 						</div>
-					</div>
-
-
-					<div class="row center ">
-
+						<div class="hidden-md hidden-lg center">
+							<h5 class="t400 text">
+								Existing Patients Call:<br>
+								<a href="tel:1-704-547-8734" class="link-no-style t700 phone-number phone-number--sub">(704)&nbsp;547&#8209;8734</a>
+							</h5>
+						</div>
 					</div>
 
 				</div>
@@ -289,13 +290,19 @@
 						<div class="col-md-6 phone-slab__left">
 							<h6 class="t400 text">New Patient Hotline</h6>
 							<h3 class="phone-number "><a href="tel:1-888-900-6321" class="link-no-style ">(888)<span style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">&nbsp;</span>900&#8209;6321</a></h3>
-							<h5 class="t400 text">
+							<h5 class="t400 text hidden-xs hidden-sm">
 								Existing patients:
 								<a href="tel:1-704-547-8734" class="link-no-style t700 phone-number phone-number--sub">(704)&nbsp;547&#8209;8734</a>
 							</h5>
 						</div>
 						<div class="col-md-6 phone-slab__right ">
 							<button class="btn" data-toggle="modal" data-target="#requestAppointmentForm">Request An Appointment</button>
+						</div>
+						<div class="hidden-md hidden-lg center">
+							<h5 class="t400 text">
+								Existing Patients Call:<br>
+								<a href="tel:1-704-547-8734" class="link-no-style t700 phone-number phone-number--sub">(704)&nbsp;547&#8209;8734</a>
+							</h5>
 						</div>
 					</div>
 
