first pass on location card

--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,8 @@
 
 	<!-- Document Meta
 	============================================= -->
-	<title>#1 Warwick Dentist - Jack Paquette, DMD</title>
-	<meta name='description' content='Dr. Jack Paquette is one of Warwick’s most loved dentists. Join us for a $45 Limited Time New Patient Special. Read our patient reviews! '>
+	<title>#1 Warwick Dentist -  Davis, DMD</title>
+	<meta name='description' content='Dr.  Davis is one of Warwick’s most loved dentists. Join us for a $45 Limited Time New Patient Special. Read our patient reviews! '>
 	<meta name='keywords' content='warwick rhode island cosmetic dentist, warwick rhode island family dentist, warwick rhode island general dentist, warwick cosmetic dentistry, warwick family dentistry, warwick general dentistry, warwick rhode island restorative dentistry, warwick restorative dentist, warwick rhode island periodontic dentistry, warwick perio treatment, warwick special needs dentist, warwick rhode island special needs dentist, warwick rhode island laser dentistry, warwick laser dentist, periolase, mvp-7, warwick rhode island sleep apnea, warwick sleep apnea treatment, warwick lanap, warwick periolase'>
 
 	<!--Fonts-->
@@ -452,28 +452,50 @@
 				<div class="container floating-card">
 					<div class="center">
 						<div class="row">
-							<div class="col-lg-4 col-md-5 col-lg-push-8 col-md-push-7 floating-card--col-fix">
+							<div class="col-lg-4 col-md-5 col-lg-push-8 col-md-push-6 floating-card--col-fix">
 								<div class="location-card center">
 
 									<!--Logo-->
 									<a href="#" class="standard-logo" data-scrollTo="#header" data-offset="60">
-										<img  src="assets/warwick-logo.svg" alt="Dr. Paquette">
+										<img  src="assets/logo.png" alt="Dr. Davis">
 									</a>
 
 									<p class="t300">2325 W Arbors Dr.<br>Charlotte, NC 28262</p>
 									<a href="https://www.google.com/maps/place/2325+W+Arbors+Dr,+Charlotte,+NC+28262/@35.3384596,-80.7629621,17z/data=!3m1!4b1!4m5!3m4!1s0x88541c541ad4594b:0x26f7409c5fc8890b!8m2!3d35.3384596!4d-80.7607734" target="_blank" class="link-no-style ">
-										<h6 class="t400 underline">Click for map & directions</h6>
+										<h6 class="t400 underline">Click to view map</h6>
 									</a>
 
 									<h6>New Patient Hotline</h6>
 									<h3 class="  phone-number"><a href="tel:1-888-900-6321" class="link-no-style">(888)<span style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">&nbsp;</span>900&#8209;6321</a></h3>
 
-									<a class="btn shadowed" data-toggle="modal" data-target="#requestAppointmentForm">Request Appointment</a>
+									<a class="btn" data-toggle="modal" data-target="#requestAppointmentForm">Request An Appointment</a>
 
-									<h6>Existing Patients Call:</h6>
+									<h6>Existing patients call</h6>
 									<h4 class=" phone-number "><a href="tel:1-704-547-8734" class="link-no-style">(704)<span style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">&nbsp;</span>547&#8209;8734</a></h4>
 
-									<h6 >Hours: Mon–Fri 8:30am–5:30pm</h6>
+									<div class="hours-table">
+										<h5>Hours</h5>
+										<table >
+											<tbody><tr>
+												<th class="t400">Mon</th>
+												<td>8:00am - 5:00pm</td>
+											</tr>
+											<tr>
+												<th class="t400">Tue</th>
+												<td>8:00am - 5:00pm</td>
+											</tr>
+											<tr>
+												<th class="t400">Wed</th>
+												<td>8:00am - 5:00pm</td>
+											</tr>
+											<tr>
+												<th class="t400">Thu</th>
+												<td>8:00am - 5:00pm</td>
+											</tr>
+											</tbody>
+										</table>
+										<p class="center">Closed Fridays</p>
+									</div>
 
 								</div>
 							</div>
