first padd on the certifacte section

--- a/app/index.html
+++ b/app/index.html
@@ -507,6 +507,20 @@
 
 			</section>
 
+			<section id="section-certificates">
+				<div class="fluid-container">
+					<div class="row">
+						<div class="col-md-6 left-column">
+							<img src="assets/topdentist-logo.jpg" alt="Top Dentist Logo">
+						</div>
+						<div class="col-md-6 right-column">
+							<p>Financing Available:</p>
+							<a href="https://www.carecredit.com/apply/" target="_blank"><img src="assets/care-credit.png" alt="Care Credit Logo"></a>
+						</div>
+					</div>
+				</div>
+			</section>
+
 			<div id="requestModalContainer">
 
 				<div class="modal fade" id="requestAppointmentForm" tabindex="-1" role="dialog" aria-hidden="true">
