--- a/app/index.html
+++ b/app/index.html
@@ -577,9 +577,13 @@
 		<div class="footer-padding">
 			<div class="container">
 				<p class="notd">Copyrights &copy; 2016 All Rights Reserved by <a href="http://www.tysonsteele.com/" target="_blank" class=" notd">Tyson<span style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">&nbsp;</span>Steele<span style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">&nbsp;</span>Associates</a>.</p>
-				<a href="https://www.facebook.com/WarwickFamilyDentalGroup" target="_blank" class="social-icon si-colored si-facebook  notd">
+				<a href="https://www.facebook.com/Gina-DavisDDS-Artistic-Family-Dentistry-240790946054325" target="_blank" class="social-icon si-colored si-facebook  notd">
 					<i class="icon-facebook"></i>
 					<i class="icon-facebook"></i>
+				</a>
+				<a href="#" class="social-icon si-colored si-google  notd">
+					<i class="icon-google"></i>
+					<i class="icon-google"></i>
 				</a>
 			</div>
 		</div>
