add synced tour carousel, getting dependency related error

--- a/app/index.html
+++ b/app/index.html
@@ -347,13 +347,58 @@
 
 				<div class="">
 					<div class="owl-carousel tour-carousel">
-						<div class="owl-item"><img src="assets/tour/thumb1.jpg" alt="Office Tour 1"></div>
-						<div class="owl-item"><img src="assets/tour/thumb2.jpg" alt="Office Tour 2"></div>
-						<div class="owl-item"><img src="assets/tour/thumb3.jpg" alt="Office Tour 3"></div>
-						<div class="owl-item"><img src="assets/tour/thumb4.jpg" alt="Office Tour 4"></div>
-						<div class="owl-item"><img src="assets/tour/thumb5.jpg" alt="Office Tour 5"></div>
+						<div class="owl-item">
+							<a href="#" class="js-synced-carousel" data-toggle="modal" data-target="#tour" js-carousel-target="1">
+								<img src="assets/tour/thumb1.jpg" alt="Office Tour 1">
+							</a>
+						</div>
+						<div class="owl-item">
+							<a href="#" class="js-synced-carousel" data-target="#tour" data-toggle="modal" js-carousel-target="2">
+								<img src="assets/tour/thumb2.jpg" alt="Office Tour 2">
+							</a>
+						</div>
+						<div class="owl-item">
+							<a href="#" class="js-synced-carousel" data-target="#tour" data-toggle="modal" js-carousel-target="3">
+								<img src="assets/tour/thumb3.jpg" alt="Office Tour 3">
+							</a>
+						</div>
+						<div class="owl-item">
+							<a href="#" class="js-synced-carousel" data-target="#tour" data-toggle="modal" js-carousel-target="4">
+								<img src="assets/tour/thumb4.jpg" alt="Office Tour 4">
+							</a>
+						</div>
+						<div class="owl-item">
+							<a href="#" class="js-synced-carousel" data-target="#tour" data-toggle="modal" js-carousel-target="5">
+								<img src="assets/tour/thumb5.jpg" alt="Office Tour 5">
+							</a>
+						</div>
 					</div>
 				</div>
+
+
+				<div class="modal fade" id="tour" tabindex="-1" role="dialog" aria-hidden="true">
+					<div class="modal-dialog">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+								<h3 class="modal-title">Tour</h3>
+							</div>
+							<div class="modal-body">
+
+								<div class="owl-carousel tour-carousel-2">
+									<div class="owl-item"><img src="assets/tour/thumb1.jpg" alt="Office Tour 1"></div>
+									<div class="owl-item"><img src="assets/tour/thumb2.jpg" alt="Office Tour 2"></div>
+									<div class="owl-item"><img src="assets/tour/thumb3.jpg" alt="Office Tour 3"></div>
+									<div class="owl-item"><img src="assets/tour/thumb4.jpg" alt="Office Tour 4"></div>
+									<div class="owl-item"><img src="assets/tour/thumb5.jpg" alt="Office Tour 5"></div>
+								</div>
+
+							</div>
+						</div>
+					</div>
+				</div>
+
+
 
 			</section>
 
@@ -564,6 +609,7 @@
 						</div>
 					</div>
 				</div>
+
 			</div>
 
 		</div>
