update meta tags

--- a/app/index.html
+++ b/app/index.html
@@ -12,9 +12,9 @@
 
 	<!-- Document Meta
 	============================================= -->
-	<title>#1 Warwick Dentist -  Davis, DMD</title>
-	<meta name='description' content='Dr.  Davis is one of Warwick’s most loved dentists. Join us for a $45 Limited Time New Patient Special. Read our patient reviews! '>
-	<meta name='keywords' content='warwick rhode island cosmetic dentist, warwick rhode island family dentist, warwick rhode island general dentist, warwick cosmetic dentistry, warwick family dentistry, warwick general dentistry, warwick rhode island restorative dentistry, warwick restorative dentist, warwick rhode island periodontic dentistry, warwick perio treatment, warwick special needs dentist, warwick rhode island special needs dentist, warwick rhode island laser dentistry, warwick laser dentist, periolase, mvp-7, warwick rhode island sleep apnea, warwick sleep apnea treatment, warwick lanap, warwick periolase'>
+	<title>#1 Charlotte Dentist - Gina Davis, DDS</title>
+	<meta name='description' content='Dr. Gina Davis is one of Charlotte’s most loved dentists. Join us for a $45 Limited Time New Patient Special. Read our patient reviews!'>
+	<meta name="keywords" content="charlotte north carolina dentist, charlotte north carolina general dentist, charlotte north carolina cosmetic dentist, charlotte north carolina dental, charlotte dentist, charlotte general dentist, charlotte cosmetic dentist, charlotte nc dental, charlotte dental, charlotte north carolina family dentist, charlotte family dentist, charlotte crowns, charlotte north carolina crowns, charlotte north carolina root canals, charlotte root canals, charlotte north carolina veneers, charlotte veneers, charlotte north carolina tooth whitening, charlotte tooth whitening, charlotte north carolina smile whitening, charlotte smile whitening" />
 
 	<!--Fonts-->
 	<!--=============================================-->
