styling cleanup from QA

--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
 			<nav id="primary-menu">
 
 				<ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1500">
-					<li><a href="#" data-offset="40" data-href="#section-specials"><div class="t700">New Patient Offers</div></a></li>
+					<li><a href="#" data-offset="60" data-href="#section-specials"><div class="t700">New Patient Offers</div></a></li>
 					<li><a href="#" data-offset="60" data-href="#section-insurance"><div class="t700">No Insurance?</div></a></li>
 					<li><a href="#" data-offset="60" data-href="#section-reviews"><div class="t700">Reviews</div></a></li>
 					<li><a href="#" data-offset="40" data-href="#section-about"><div class="t400">Meet the Doctor</div></a></li>
@@ -99,7 +99,7 @@
 									<img src="assets/logo-full-desktop.png" alt="Logo">
 									<div class="text-on-logo">
 										<h4>Now Welcoming New Patients</h4>
-										<a href="#section-about" class="btn">New Patient Offers</a>
+										<a href="#" class="btn" data-scrollTo="#section-about" data-offset="40">New Patient Offers</a>
 									</div>
 								</div>
 							</div>
@@ -143,7 +143,7 @@
 								<div class="col-sm-7 col-sm-push-5 center">
 									<h1>No Insurance?</h1>
 									<h2>Our Patients Don’t Need It!</h2>
-									<h5>Get your preventative care  for a monthly fee.</h5>
+									<h4>Get your preventative care  for a monthly fee.</h4>
 									<a href="#" class="btn" data-offset="60" data-scrollTo="#section-insurance">Learn More</a>
 								</div>
 							</div>
@@ -205,7 +205,7 @@
 						</div>
 						<div class="col-md-6">
 							<h3>Gina Davis, DDS</h3>
-							<h5>Family and Cosmetic Dentistry</h5>
+							<h4>Family and Cosmetic Dentistry</h4>
 							<p>Dr. Davis began her dental career in the dental hygiene program at West Virginia University. She had
 								such a love for the dental field that she continued her education and earned her Doctor of Dental
 								Surgery Degree from WVU in 1997. She graduated in the top 5% of her class and earned the prestigious
@@ -231,7 +231,7 @@
 
 				<div class="heading center">
 					<h2 >Limited Time Special Offers</h2>
-					<h3 class="t400">Offer Ends by November 20, 2016</h3>
+					<h3 class="t400">Offer Ends by November&nbsp;20, 2016</h3>
 				</div>
 
 				<div class="container-wrapper">
@@ -407,8 +407,7 @@
 					<h2>Our Services</h2>
 					<P>By actively preventing disease and decay through regular home care, professional dental cleanings and
 						regular exams, we’ll partner with you to maintain your healthy, beautiful smile. Prevention is always better
-						than treatment, so if it’s been a while since you’ve seen a dentist, please give us a call or <a href="#" data-toggle="modal" data-target="#requestAppointmentForm">click to
-							request an appointment</a>.</P>
+						than treatment, so if it’s been a while since you’ve seen a dentist, please give us a call or <a href="#" data-toggle="modal" data-target="#requestAppointmentForm">click&nbsp;to&nbsp;request&nbsp;an&nbsp;appointment</a>.</P>
 				</div>
 
 				<div class="container body-one">
@@ -603,7 +602,7 @@
 									</div>
 								</div>
 								<div class="center">
-									<button type="submit" class="btn  ">Request Appointment</button>
+									<button type="submit" class="btn form-btn">Request Appointment</button>
 								</div>
 							</form>
 						</div>
@@ -653,7 +652,7 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/plugins.js"></script>
-<script type="text/javascript" src="//birdeye.com/embed/v4/147266628915919/3/1913325476"></script>
+<!--<script type="text/javascript" src="//birdeye.com/embed/v4/147266628915919/3/1913325476"></script>-->
 <!--TODO Replace the API key in this google maps API call with one maintained by Tyson Steele-->
 <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyD9MyO7Caj7KcauW3m4lEUzcFcVRvQDK2s"></script>
 <script type="text/javascript" src="js/jquery.gmap.js"></script>
