--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
 			<div id="logo">
 				<a href="#" data-scrollTo="#header" data-offset="60">
 					<div>
-						<img src="assets/nav-logo.png" alt="Gina Davis">
+						<img src="assets/davis-logo.png" alt="Gina Davis">
 					</div>
 				</a>
 			</div><!-- #logo end -->
@@ -61,6 +61,7 @@
 					<li><a href="#" data-offset="60" data-href="#section-insurance"><div class="t700">No Insurance?</div></a></li>
 					<li><a href="#" data-offset="60" data-href="#section-reviews"><div class="t700">Reviews</div></a></li>
 					<li><a href="#" data-offset="40" data-href="#section-about"><div class="t400">Meet the Doctor</div></a></li>
+					<li><a href="#" data-offset="40" data-href="#section-services"><div class="t400">Services</div></a></li>
 					<li><a href="#" data-offset="60" data-href="#section-tour"><div class="t400">Tour</div></a></li>
 					<li><a href="#" data-offset="60" data-href="#section-location"><div class="t400">Location</div></a></li>
 				</ul>
@@ -99,7 +100,7 @@
 									<img src="assets/logo-full-desktop.png" alt="Logo">
 									<div class="text-on-logo">
 										<h4>Now Welcoming New Patients</h4>
-										<a href="#" class="btn" data-scrollTo="#section-about" data-offset="40">New Patient Offers</a>
+										<a href="#" class="btn" data-scrollTo="#section-specials" data-offset="60">New Patient Offers</a>
 									</div>
 								</div>
 							</div>
@@ -209,13 +210,13 @@
 							<p>Dr. Davis began her dental career in the dental hygiene program at West Virginia University. She had
 								such a love for the dental field that she continued her education and earned her Doctor of Dental
 								Surgery Degree from WVU in 1997. She graduated in the top 5% of her class and earned the prestigious
-								award for Outstanding Clinical Competency and Professionalism awarded by the faculty. To further her
+								award for Outstanding Clinical Competency and Professionalism awarded by the faculty. <span class="hidden-sm hidden-xs"> To further her
 								education and experience with advanced diagnosis, treatment, and cosmetic dentistry she completed an
 								Advanced Education in General Dentistry Residency Program at the University of North Carolina in 1998.
 								She has been practicing dentistry in Charlotte, NC since that time. Dr. Davis places a priority on
 								treating each patient as an individual and creating a treatment plan that is customized based on the
 								individual goals and needs. For Dr. Davis, the most rewarding part of the career that she has chosen is
-								the relationships that she forms with each patient, while helping them achieve their goals.</p>
+								the relationships that she forms with each patient, while helping them achieve their goals.</span></p>
 							<p>Dr. Davis has received the honor of being listed as one of Charlotte's Best Dentists by Charlotte
 								Magazine every year since 2008.</p>
 							<p>Dr. Davis is also a member of several associations such as the American Dental Association (ADA)
