--- a/app/index.html
+++ b/app/index.html
@@ -235,7 +235,7 @@
 					<h3 class="t400">Offer Ends by November&nbsp;20, 2016</h3>
 				</div>
 
-				<div class="container-wrapper">
+				<div class="container-wrapper parallax">
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-4">
@@ -291,19 +291,9 @@
 						<div class="col-md-6 phone-slab__left">
 							<h6 class="t400 text">New Patient Hotline</h6>
 							<h3 class="phone-number "><a href="tel:1-888-900-6321" class="link-no-style ">(888)<span style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">&nbsp;</span>900&#8209;6321</a></h3>
-							<h5 class="t400 text hidden-xs hidden-sm">
-								Existing patients:
-								<a href="tel:1-704-547-8734" class="link-no-style t700 phone-number phone-number--sub">(704)&nbsp;547&#8209;8734</a>
-							</h5>
 						</div>
 						<div class="col-md-6 phone-slab__right ">
 							<button class="btn" data-toggle="modal" data-target="#requestAppointmentForm">Request An Appointment</button>
-						</div>
-						<div class="hidden-md hidden-lg center">
-							<h5 class="t400 text">
-								Existing Patients Call:<br>
-								<a href="tel:1-704-547-8734" class="link-no-style t700 phone-number phone-number--sub">(704)&nbsp;547&#8209;8734</a>
-							</h5>
 						</div>
 					</div>
 
@@ -316,7 +306,7 @@
 				</div>
 				<div class="reviews container">
 					<div class="reviews-wrap">
-						<div id="bf-revz-widget-1913325476" style="-webkit-overflow-scrolling:touch;">
+						<div id="bf-revz-widget-1911608989" style="-webkit-overflow-scrolling:touch;">
 							<div class="bf-dv"><span class="bf-spn">Provided by <a class="bf-pro" href="http://www.tysonsteele.com/" target="_blank">Tyson Steele Associates</a></span></div>
 						</div>
 					</div>
@@ -653,7 +643,7 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/plugins.js"></script>
-<!--<script type="text/javascript" src="//birdeye.com/embed/v4/147266628915919/3/1913325476"></script>-->
+<script type="text/javascript" src="//birdeye.com/embed/v4/147266628915919/3/1911608989"></script>
 <!--TODO Replace the API key in this google maps API call with one maintained by Tyson Steele-->
 <script type="text/javascript" src="https://maps.google.com/maps/api/js?key=AIzaSyD9MyO7Caj7KcauW3m4lEUzcFcVRvQDK2s"></script>
 <script type="text/javascript" src="js/jquery.gmap.js"></script>
