no insurance section

--- a/app/index.html
+++ b/app/index.html
@@ -314,23 +314,28 @@
 				<div class="container clearfix"></div>
 			</section>
 
-			<section id="section-insurance">
-				<div class="container">
-					<div class="row">
-						<div class="col-sm-6 center">
-							<h2>No Insurance?</h2>
-							<h4>Our Patients Don’t Need It!</h4>
-							<h3>GET YOUR PREVENTIVE CARE<br>FOR A LOW MONTHLY FEE</h3>
-							<h6 class="sub-text">Exclusively for our uninsured patients</h6>
-							<h6 class="sub-text">Make easy payments for your preventive care</h6>
-							<h6 class="sub-text">Save money on your treatment</h6>
-							<a class="btn" href="https://gina-davis-dds.illumitrac.com/#programs" target="_blank">Read More</a>
+			<section id="section-insurance" class="parallax">
+
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-6 center">
+								<h2>No Insurance?</h2>
+								<h4>Our Patients Don’t Need It!</h4>
+								<h3>GET YOUR PREVENTIVE CARE<br>FOR A LOW MONTHLY FEE</h3>
+								<h6 class="sub-text">Exclusively for our uninsured patients</h6>
+								<h6 class="sub-text">Make easy payments for your preventive care</h6>
+								<h6 class="sub-text">Save money on your treatment</h6>
+								<a class="btn" href="https://gina-davis-dds.illumitrac.com/#programs" target="_blank">Learn More</a>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="mobile-insurance-fix">
-					<img src="/assets/davis-insurance-bg.jpg" alt="mother and child smiling">
-				</div>
+					<div class="floating-image hidden-xs hidden-sm">
+						<img src="assets/insurance-photo.png" alt="Woman and Child Smiling">
+					</div>
+					<div class="mobile-image">
+						<!--<img src="assets/" alt="">-->
+					</div>
+
 			</section>
 
 			<section id="section-tour">
