finish first round of edits

--- a/app/index.html
+++ b/app/index.html
@@ -399,8 +399,8 @@
 			</section>
 
 			<section id="section-services" class="parallax">
-				<div class="container heading center">
-					<h2>Our Services</h2>
+				<div class="container heading">
+					<div class="center"><h2>Our Services</h2></div>
 					<P>By actively preventing disease and decay through regular home care, professional dental cleanings and
 						regular exams, we’ll partner with you to maintain your healthy, beautiful smile. Prevention is always better
 						than treatment, so if it’s been a while since you’ve seen a dentist, please give us a call or <a href="#" data-toggle="modal" data-target="#requestAppointmentForm">click&nbsp;to&nbsp;request&nbsp;an&nbsp;appointment</a>.</P>
@@ -501,7 +501,7 @@
 									</a>
 
 									<p class="t300">2325 W Arbors Dr.<br>Charlotte, NC 28262</p>
-									<a href="https://www.google.com/maps/place/2325+W+Arbors+Dr,+Charlotte,+NC+28262/@35.3384596,-80.7629621,17z/data=!3m1!4b1!4m5!3m4!1s0x88541c541ad4594b:0x26f7409c5fc8890b!8m2!3d35.3384596!4d-80.7607734" target="_blank" class="link-no-style ">
+									<a href="https://www.google.com/maps/place/Davis+Gina+R+DDS+PA/@35.3384573,-80.7606259,15z/data=!4m5!3m4!1s0x0:0x90c352d26dbdbb56!8m2!3d35.3384573!4d-80.7606259" target="_blank" class="link-no-style ">
 										<h6 class="t400 underline">Click to view map</h6>
 									</a>
 
@@ -543,12 +543,12 @@
 					</div>
 				</div>
 
-				<a href="https://www.google.com/maps/place/2325+W+Arbors+Dr,+Charlotte,+NC+28262/@35.3384596,-80.7629621,17z/data=!3m1!4b1!4m5!3m4!1s0x88541c541ad4594b:0x26f7409c5fc8890b!8m2!3d35.3384596!4d-80.7607734" target="_blank"><div id="google-map5" class="gmap"></div></a>
+				<a href="https://www.google.com/maps/place/Davis+Gina+R+DDS+PA/@35.3384573,-80.7606259,15z/data=!4m5!3m4!1s0x0:0x90c352d26dbdbb56!8m2!3d35.3384573!4d-80.7606259" target="_blank"><div id="google-map5" class="gmap"></div></a>
 
 			</section>
 
 			<section id="section-certificates">
-				<div class="fluid-container">
+				<div class="container">
 					<div class="row">
 						<div class="col-md-6 left-column">
 							<img src="assets/topdentist-logo.jpg" alt="Top Dentist Logo">
@@ -617,14 +617,14 @@
 
 		<div class="footer-padding">
 			<div class="container">
-				<p class="notd">Copyrights &copy; 2016 All Rights Reserved by <a href="http://www.tysonsteele.com/" target="_blank" class=" notd">Tyson<span style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">&nbsp;</span>Steele<span style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">&nbsp;</span>Associates</a>.</p>
+				<p class="notd">Copyrights &copy; 2016 All Right Reserved by <a href="http://www.tysonsteele.com/" target="_blank" class=" notd">Tyson<span style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">&nbsp;</span>Steele<span style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">&nbsp;</span>Associates</a>.</p>
+				<a href="https://www.google.com/search?espv=2&q=gina+davis+dds&oq=gina+davis+dds&gs_l=serp.3..0l2.4568.4568.0.4864.1.1.0.0.0.0.56.56.1.1.0....0...1c.1.64.serp..0.1.56.zC4t8vfN1Z8#lrd=0x88541c541b373101:0x90c352d26dbdbb56,1," target="_blank" class="social-icon si-colored si-google  notd">
+					<i class="icon-google"></i>
+					<i class="icon-google"></i>
+				</a>
 				<a href="https://www.facebook.com/Gina-DavisDDS-Artistic-Family-Dentistry-240790946054325" target="_blank" class="social-icon si-colored si-facebook  notd">
 					<i class="icon-facebook"></i>
 					<i class="icon-facebook"></i>
-				</a>
-				<a href="#" class="social-icon si-colored si-google  notd">
-					<i class="icon-google"></i>
-					<i class="icon-google"></i>
 				</a>
 			</div>
 		</div>
