--- a/app/index.html
+++ b/app/index.html
@@ -449,42 +449,173 @@
 			<section id="section-services-carousel">
 				<div class="owl-carousel services-carousel">
 
-					<div class="owl-item">
+					<a href="#" data-toggle="modal" data-target="#service-modal1" class="owl-item">
 						<img src="assets/services/veneers.jpg" alt="Service Image">
 						<h5 class="floating-owl-title">Veneers</h5>
-					</div>
+					</a>
 
-					<div class="owl-item">
+					<a href="#" data-toggle="modal" data-target="#service-modal2" class="owl-item">
 						<img src="assets/services/whitening.jpg" alt="Service Image">
 						<h5 class="floating-owl-title">Whitening</h5>
-					</div>
+					</a>
 
-					<div class="owl-item">
+					<a href="#" data-toggle="modal" data-target="#service-modal3" class="owl-item">
 						<img src="assets/services/composites.jpg" alt="Service Image">
 						<h5 class="floating-owl-title">Composites</h5>
-					</div>
+					</a>
 
-					<div class="owl-item">
+					<a href="#" data-toggle="modal" data-target="#service-modal4" class="owl-item">
 						<img src="assets/services/crowns.jpg" alt="Service Image">
 						<h5 class="floating-owl-title">Crowns</h5>
-					</div>
+					</a>
 
-					<div class="owl-item">
+					<a href="#" data-toggle="modal" data-target="#service-modal5" class="owl-item">
 						<img src="assets/services/digital-xray.jpg" alt="Service Image">
 						<h5 class="floating-owl-title">Digital X-ray</h5>
-					</div>
+					</a>
 
-					<div class="owl-item">
+					<a href="#" data-toggle="modal" data-target="#service-modal6" class="owl-item">
 						<img src="assets/services/periodontal.jpg" alt="Service Image">
 						<h5 class="floating-owl-title">Periodontal</h5>
-					</div>
+					</a>
 
-					<div class="owl-item">
+					<a href="#" data-toggle="modal" data-target="#service-modal7" class="owl-item">
 						<img src="assets/services/rootcanals.jpg" alt="Service Image">
 						<h5 class="floating-owl-title">Root Canals</h5>
-					</div>
+					</a>
 
 				</div>
+
+				<!--service modals-->
+				<div id="service-modal1" class="modal fade" tabindex="-1" role="dialog">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+								<h4 class="modal-title">Veneers</h4>
+							</div>
+							<div class="modal-body">
+								<div class="modal-image"><img src="assets/services/veneers.jpg" alt="services image"></div>
+								<p>Veneers are very thin porcelain pieces that are custom made to adhere directly to the front of teeth
+									without grinding or shaving. Transform your smile without drilling on your natural teeth!</p>
+								<p>In the hands of a highly skilled dentist, porcelain laminates can provide you with an incredibly
+									natural, beautiful smile. They are virtually undetectable and can dramatically improve your
+									appearance. They are durable and long-lasting when compared to other cosmetic treatments.</p>
+							</div>
+						</div><!-- /.modal-content -->
+					</div><!-- /.modal-dialog -->
+				</div><!-- /.modal -->
+				<div id="service-modal2" class="modal fade" tabindex="-1" role="dialog">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+								<h4 class="modal-title">Whitening</h4>
+							</div>
+							<div class="modal-body">
+								<div class="modal-image"><img src="assets/services/whitening.jpg" alt="services image"></div>
+								<p>Many everyday things like coffee, tea and wine can significantly dull teeth. Smile-whitening enables
+									us to significantly brighten your smile for that dazzling white smile you deserve.</p>
+								<p>Plastic whitening trays will be made from models of your teeth. You will then place a special
+									whitening gel in each tray and wear the trays in your mouth for several hours per day. (Many patients
+									wear their trays after dinner and before bed.) A significant change in tooth color is usually seen in
+									just four to six weeks.</p>
+							</div>
+						</div><!-- /.modal-content -->
+					</div><!-- /.modal-dialog -->
+				</div><!-- /.modal -->
+				<div id="service-modal3" class="modal fade" tabindex="-1" role="dialog">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+								<h4 class="modal-title">Composites</h4>
+							</div>
+							<div class="modal-body">
+								<div class="modal-image"><img src="assets/services/composites.jpg" alt="services image"></div>
+								<p>The common silver filling contains mercury. Dr. Davis uses the highest-quality biocompatible,
+									tooth-colored restorations to create healthy, beautiful smiles.​ Since the composite material adheres
+									directly to the tooth enamel, less preparation of the tooth is required before using it. This means it
+									is more durable and provides a more natural-looking result.</p>
+							</div>
+						</div><!-- /.modal-content -->
+					</div><!-- /.modal-dialog -->
+				</div><!-- /.modal -->
+
+
+				<div id="service-modal4" class="modal fade" tabindex="-1" role="dialog">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+								<h4 class="modal-title">Crowns</h4>
+							</div>
+							<div class="modal-body">
+								<div class="modal-image"><img src="assets/services/crowns.jpg" alt="services image"></div>
+								<p>Protect and keep badly decayed or fractured teeth while maintaining a beautiful smile. Made to
+									perfectly match the shape and shade of your other teeth, they’re durable, strong, and
+									undetectable.</p>
+								<p>Crowns should be placed before the tooth is so decayed that it may fracture. This can often help
+									prevent the expense of root canal therapy in the future. If a tooth is too damaged to have a crown
+									applied, a porcelain bridge may be a good alternative.</p>
+							</div>
+						</div><!-- /.modal-content -->
+					</div><!-- /.modal-dialog -->
+				</div><!-- /.modal -->
+				<div id="service-modal5" class="modal fade" tabindex="-1" role="dialog">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+								<h4 class="modal-title">Digital X-Rays</h4>
+							</div>
+							<div class="modal-body">
+								<div class="modal-image"><img src="assets/services/digital-xray.jpg" alt="services image"></div>
+								<p>Our use of digital x-ray technology reduces your radiation exposure and eliminates the use of
+									chemicals. It’s better for you and the environment.</p>
+								<p>It's also easy for you to see what the doctor sees. Your digital x-ray can be seen on a computer
+									screen located next to your dental chair. This helps you understand your needs and make informed
+									choices about your treatment.</p>
+							</div>
+						</div><!-- /.modal-content -->
+					</div><!-- /.modal-dialog -->
+				</div><!-- /.modal -->
+				<div id="service-modal6" class="modal fade" tabindex="-1" role="dialog">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+								<h4 class="modal-title">Periodontal</h4>
+							</div>
+							<div class="modal-body">
+								<div class="modal-image"><img src="assets/services/periodontal.jpg" alt="services image"></div>
+								<p>Gum disease is treated by carefully removing the bacteria and substances that form in the pockets
+									around the teeth. The removal of this material occurs on a microscopic level and requires great skill.
+									Our dental team has had advanced training to effectively remove all of the bacteria.</p>
+							</div>
+						</div><!-- /.modal-content -->
+					</div><!-- /.modal-dialog -->
+				</div><!-- /.modal -->
+
+
+				<div id="service-modal7" class="modal fade" tabindex="-1" role="dialog">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+								<h4 class="modal-title">Root Canals
+								</h4>
+							</div>
+							<div class="modal-body">
+								<div class="modal-image"><img src="assets/services/rootcanals.jpg" alt="services image"></div>
+								<p>Root canal therapy is an excellent way to save a tooth that would otherwise die and need to be
+									removed. All teeth that have had root canal therapy must be protected with a crown. This is because
+									teeth that have had the pulp removed are more susceptible to fracture.</p>
+							</div>
+						</div><!-- /.modal-content -->
+					</div><!-- /.modal-dialog -->
+				</div><!-- /.modal -->
+
 			</section>
 
 			<section id="section-location" class="content-section">
