fix behaviour of carousels

--- a/app/index.html
+++ b/app/index.html
@@ -450,43 +450,59 @@
 				<div class="owl-carousel services-carousel">
 
 					<a href="#" data-toggle="modal" data-target="#service-modal1" class="owl-item">
+						<div>
 						<img src="assets/services/veneers.jpg" alt="Service Image">
 						<h5 class="floating-owl-title">Veneers</h5>
+						</div>
 					</a>
 
 					<a href="#" data-toggle="modal" data-target="#service-modal2" class="owl-item">
+						<div>
 						<img src="assets/services/whitening.jpg" alt="Service Image">
 						<h5 class="floating-owl-title">Whitening</h5>
+						</div>
 					</a>
 
 					<a href="#" data-toggle="modal" data-target="#service-modal3" class="owl-item">
+						<div>
 						<img src="assets/services/composites.jpg" alt="Service Image">
 						<h5 class="floating-owl-title">Composites</h5>
+						</div>
 					</a>
 
 					<a href="#" data-toggle="modal" data-target="#service-modal4" class="owl-item">
+						<div>
 						<img src="assets/services/crowns.jpg" alt="Service Image">
 						<h5 class="floating-owl-title">Crowns</h5>
+						</div>
 					</a>
 
 					<a href="#" data-toggle="modal" data-target="#service-modal5" class="owl-item">
+						<div>
 						<img src="assets/services/digital-xray.jpg" alt="Service Image">
 						<h5 class="floating-owl-title">Digital X-ray</h5>
+						</div>
 					</a>
 
 					<a href="#" data-toggle="modal" data-target="#service-modal6" class="owl-item">
+						<div>
 						<img src="assets/services/periodontal.jpg" alt="Service Image">
 						<h5 class="floating-owl-title">Periodontal</h5>
+						</div>
 					</a>
 
 					<a href="#" data-toggle="modal" data-target="#service-modal7" class="owl-item">
+						<div>
 						<img src="assets/services/rootcanals.jpg" alt="Service Image">
 						<h5 class="floating-owl-title">Root Canals</h5>
+						</div>
 					</a>
 
 				</div>
 
 				<!--service modals-->
+				<div class="services-modals">
+
 				<div id="service-modal1" class="modal fade" tabindex="-1" role="dialog">
 					<div class="modal-dialog" role="document">
 						<div class="modal-content">
@@ -495,7 +511,7 @@
 								<h4 class="modal-title">Veneers</h4>
 							</div>
 							<div class="modal-body">
-								<div class="modal-image"><img src="assets/services/veneers.jpg" alt="services image"></div>
+								<div class="modal-image center"><img src="assets/services/veneers.jpg" alt="services image"></div>
 								<p>Veneers are very thin porcelain pieces that are custom made to adhere directly to the front of teeth
 									without grinding or shaving. Transform your smile without drilling on your natural teeth!</p>
 								<p>In the hands of a highly skilled dentist, porcelain laminates can provide you with an incredibly
@@ -513,7 +529,7 @@
 								<h4 class="modal-title">Whitening</h4>
 							</div>
 							<div class="modal-body">
-								<div class="modal-image"><img src="assets/services/whitening.jpg" alt="services image"></div>
+								<div class="modal-image center"><img src="assets/services/whitening.jpg" alt="services image"></div>
 								<p>Many everyday things like coffee, tea and wine can significantly dull teeth. Smile-whitening enables
 									us to significantly brighten your smile for that dazzling white smile you deserve.</p>
 								<p>Plastic whitening trays will be made from models of your teeth. You will then place a special
@@ -532,7 +548,7 @@
 								<h4 class="modal-title">Composites</h4>
 							</div>
 							<div class="modal-body">
-								<div class="modal-image"><img src="assets/services/composites.jpg" alt="services image"></div>
+								<div class="modal-image center"><img src="assets/services/composites.jpg" alt="services image"></div>
 								<p>The common silver filling contains mercury. Dr. Davis uses the highest-quality biocompatible,
 									tooth-colored restorations to create healthy, beautiful smiles.​ Since the composite material adheres
 									directly to the tooth enamel, less preparation of the tooth is required before using it. This means it
@@ -551,7 +567,7 @@
 								<h4 class="modal-title">Crowns</h4>
 							</div>
 							<div class="modal-body">
-								<div class="modal-image"><img src="assets/services/crowns.jpg" alt="services image"></div>
+								<div class="modal-image center"><img src="assets/services/crowns.jpg" alt="services image"></div>
 								<p>Protect and keep badly decayed or fractured teeth while maintaining a beautiful smile. Made to
 									perfectly match the shape and shade of your other teeth, they’re durable, strong, and
 									undetectable.</p>
@@ -570,7 +586,7 @@
 								<h4 class="modal-title">Digital X-Rays</h4>
 							</div>
 							<div class="modal-body">
-								<div class="modal-image"><img src="assets/services/digital-xray.jpg" alt="services image"></div>
+								<div class="modal-image center"><img src="assets/services/digital-xray.jpg" alt="services image"></div>
 								<p>Our use of digital x-ray technology reduces your radiation exposure and eliminates the use of
 									chemicals. It’s better for you and the environment.</p>
 								<p>It's also easy for you to see what the doctor sees. Your digital x-ray can be seen on a computer
@@ -588,7 +604,7 @@
 								<h4 class="modal-title">Periodontal</h4>
 							</div>
 							<div class="modal-body">
-								<div class="modal-image"><img src="assets/services/periodontal.jpg" alt="services image"></div>
+								<div class="modal-image center"><img src="assets/services/periodontal.jpg" alt="services image"></div>
 								<p>Gum disease is treated by carefully removing the bacteria and substances that form in the pockets
 									around the teeth. The removal of this material occurs on a microscopic level and requires great skill.
 									Our dental team has had advanced training to effectively remove all of the bacteria.</p>
@@ -607,7 +623,7 @@
 								</h4>
 							</div>
 							<div class="modal-body">
-								<div class="modal-image"><img src="assets/services/rootcanals.jpg" alt="services image"></div>
+								<div class="modal-image center"><img src="assets/services/rootcanals.jpg" alt="services image"></div>
 								<p>Root canal therapy is an excellent way to save a tooth that would otherwise die and need to be
 									removed. All teeth that have had root canal therapy must be protected with a crown. This is because
 									teeth that have had the pulp removed are more susceptible to fracture.</p>
@@ -615,6 +631,8 @@
 						</div><!-- /.modal-content -->
 					</div><!-- /.modal-dialog -->
 				</div><!-- /.modal -->
+
+				</div>
 
 			</section>
 
