add mobile insurance image

--- a/app/index.html
+++ b/app/index.html
@@ -329,11 +329,11 @@
 							</div>
 						</div>
 					</div>
-					<div class="floating-image hidden-xs hidden-sm">
+					<div class="floating-image hidden-xs">
 						<img src="assets/insurance-photo.png" alt="Woman and Child Smiling">
 					</div>
-					<div class="mobile-image">
-						<!--<img src="assets/" alt="">-->
+					<div class="mobile-image hidden-sm hidden-md hidden-lg">
+						<img src="assets/no-insurance_mobile.png" alt="Womand and child smiling">
 					</div>
 
 			</section>
